--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,29 +1,61 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:v-bind="http://www.w3.org/1999/xhtml"
+      xmlns:v-on="http://www.w3.org/1999/xhtml"
+      xmlns:v-model="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
-    <link rel="stylesheet" type="text/css" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
 <div class="body-container">
-    <form>
-        <!-- Email input -->
+    <div id="signInElement">
+
         <div>
-            <input type="email" />
+            <input type="text" v-model="idModel"/>
         </div>
 
-        <!-- Password input -->
         <div>
-            <input type="password"/>
+            <input type="password" v-model="passwordModel"/>
         </div>
 
         <!-- Submit button -->
-        <button type="button">Sign in</button>
+        <button @click="signIn">Sign in</button>
 
-        <p th:text="${test}"></p>
-    </form>
+    </div>
 </div>
 </body>
+
+<script type="text/javascript">
+
+    const {createApp} = Vue
+
+    createApp({
+        data() {
+            return {
+                idModel: '',
+                passwordModel: '',
+            }
+        },
+        methods: {
+            signIn: function () {
+                var param = {
+                    'id': this.idModel,
+                    'password': this.passwordModel,
+                };
+                axios
+                    .get("/auth/admin/login", {params: param})
+                    .then(function (result) {
+                        console.log(result)
+                    })
+                    .catch(function (error) {
+                        console.log(error);
+                    });
+            },
+        }
+    }).mount('#signInElement')
+
+</script>
+
 </html>
