--- a/src/main/resources/templates/html/main.html
+++ b/src/main/resources/templates/html/main.html
@@ -9,6 +9,41 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-main
+<div class="main-container">
+    <div class="left-layout">
+        <div>
+            1
+        </div>
+        <div>
+            2
+        </div>
+        <div>
+            3
+        </div>
+    </div>
+    <div class="right-layout">
+
+    </div>
+</div>
 </body>
+<style>
+.main-container{
+    width: 1920px;
+    height: 1080px;
+}
+
+.left-layout{
+    width: 10%;
+    height: 100%;
+    background-color: azure;
+    float: left;
+}
+.right-layout{
+    width: 88%;
+    height: 100%;
+    background-color: beige;
+    float: left;
+}
+
+</style>
 </html>
