챗 테스트용 페이지 샘플 추가, 메시지 서비스 코드 구성 추가

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -3,9 +3,16 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       th:fragment="MenuFragment">
-<div>
-    <div>1</div>
+<div class="menu-container">
+    <div>
+        <a href="/menu/chat">Chat Test</a>
+    </div>
     <div>2</div>
     <div>3</div>
 </div>
+<style>
+    .menu-container{
+
+    }
+</style>
 </html>
